// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C1 CandidateList > renders empty mode with hint 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <h3
      class="text-base font-semibold text-neutral-100 mb-1"
    >
      匹配候选人
    </h3>
    <div
      class="flex flex-col items-center justify-center py-10 text-center"
    >
      <div
        class="mb-3 text-neutral-700"
      >
        <svg
          class="lucide lucide-users w-10 h-10"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
      </div>
      <p
        class="text-sm text-neutral-400 max-w-xs leading-relaxed whitespace-pre-line"
      >
        暂无数据，请尝试其他查询
      </p>
    </div>
  </div>
</div>
`;

exports[`C1 CandidateList > renders live mode with candidates 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 pb-3 flex items-center justify-between"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-users w-4 h-4 text-neutral-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
        <h3
          class="text-base font-semibold text-neutral-100"
        >
          匹配候选人
        </h3>
        <span
          class="text-xs text-neutral-500"
        >
          (
          1
          )
        </span>
      </div>
      <div
        class="flex gap-1"
      />
    </div>
    <div
      class="px-4 pb-3 space-y-2"
    >
      <div
        class="flex items-center gap-3 p-3 rounded-lg bg-neutral-800/50 hover:bg-neutral-800 transition-colors cursor-pointer group"
      >
        <div
          class="flex-shrink-0 w-8 h-8 rounded-full bg-neutral-700 flex items-center justify-center text-xs font-medium text-neutral-300"
        >
          李
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="text-sm font-medium text-neutral-200"
            >
              李雷
            </span>
            <span
              class="text-[10px] px-1.5 py-0.5 rounded border bg-emerald-500/10 text-emerald-400 border-emerald-500/20"
            >
              活跃
            </span>
          </div>
          <p
            class="text-xs text-neutral-500 truncate"
          >
            字节
             · 
            推荐工程师
             · 
            6
            年
          </p>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <span
            class="text-xs font-mono font-medium text-emerald-400"
          >
            92
            %
          </span>
          <svg
            class="lucide lucide-chevron-right w-4 h-4 text-neutral-600 group-hover:text-neutral-400 transition-colors"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`C2 ProfileCard > renders live mode with full profile 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 flex items-start gap-3"
    >
      <div
        class="flex-shrink-0 w-12 h-12 rounded-full bg-gradient-to-br from-amber-500/80 to-orange-500/80 flex items-center justify-center text-lg font-semibold text-white"
      >
        李
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2"
        >
          <h3
            class="text-base font-semibold text-neutral-100"
          >
            李雷
          </h3>
          <span
            class="text-[10px] px-1.5 py-0.5 rounded border bg-emerald-500/10 text-emerald-400 border-emerald-500/20"
          >
            活跃
          </span>
        </div>
        <p
          class="text-sm text-neutral-400"
        >
          字节跳动
           · 
          推荐系统工程师
        </p>
        <div
          class="flex flex-wrap gap-x-4 gap-y-1 mt-1.5"
        >
          <span
            class="text-xs text-neutral-500 flex items-center gap-1"
          >
            <svg
              class="lucide lucide-briefcase w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="20"
                x="2"
                y="7"
              />
              <path
                d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"
              />
            </svg>
             
            6
            年经验
          </span>
          <span
            class="text-xs text-neutral-500 flex items-center gap-1"
          >
            <svg
              class="lucide lucide-graduation-cap w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.42 10.922a1 1 0 0 0-.019-1.838L12.83 5.18a2 2 0 0 0-1.66 0L2.6 9.08a1 1 0 0 0 0 1.832l8.57 3.908a2 2 0 0 0 1.66 0z"
              />
              <path
                d="M22 10v6"
              />
              <path
                d="M6 12.5V16a6 3 0 0 0 12 0v-3.5"
              />
            </svg>
             
            清华硕士
          </span>
        </div>
      </div>
      <div
        class="flex-shrink-0 w-12 h-12 rounded-full border-2 flex items-center justify-center text-sm font-bold font-mono text-emerald-400 border-emerald-400/30"
      >
        92
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <div
        class="flex flex-wrap gap-1.5"
      >
        <span
          class="px-2 py-0.5 text-xs rounded-md bg-neutral-800 text-neutral-400"
        >
          推荐系统
        </span>
        <span
          class="px-2 py-0.5 text-xs rounded-md bg-neutral-800 text-neutral-400"
        >
          Flink
        </span>
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <h4
        class="text-xs font-medium text-neutral-500 uppercase tracking-wider mb-2"
      >
        工作经历
      </h4>
      <div
        class="space-y-2"
      >
        <div
          class="flex gap-3"
        >
          <div
            class="flex-shrink-0 mt-0.5"
          >
            <svg
              class="lucide lucide-building2 w-3.5 h-3.5 text-neutral-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
              />
              <path
                d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
              />
              <path
                d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
              />
              <path
                d="M10 6h4"
              />
              <path
                d="M10 10h4"
              />
              <path
                d="M10 14h4"
              />
              <path
                d="M10 18h4"
              />
            </svg>
          </div>
          <div
            class="min-w-0"
          >
            <p
              class="text-sm text-neutral-300"
            >
              推荐工程师
               
              <span
                class="text-neutral-500"
              >
                @ 
                字节
              </span>
            </p>
            <p
              class="text-xs text-neutral-600"
            >
              2022-至今
            </p>
            <ul
              class="mt-1 space-y-0.5"
            >
              <li
                class="text-xs text-neutral-500 pl-2 border-l border-neutral-800"
              >
                CTR+12%
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <h4
        class="text-xs font-medium text-neutral-500 uppercase tracking-wider mb-2"
      >
        项目经历
      </h4>
      <div
        class="space-y-2"
      >
        <div
          class="p-2.5 rounded-lg bg-neutral-800/50"
        >
          <p
            class="text-sm font-medium text-neutral-300"
          >
            实时推荐引擎
          </p>
          <p
            class="text-xs text-neutral-500 mt-0.5"
          >
            支持百亿级特征
          </p>
          <div
            class="flex flex-wrap gap-1 mt-1.5"
          >
            <span
              class="px-1.5 py-0.5 text-[10px] rounded bg-neutral-700 text-neutral-400"
            >
              Flink
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`C2 ProfileCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="flex items-center gap-3 mb-4"
    >
      <div
        class="w-12 h-12 rounded-full bg-neutral-800 animate-pulse"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="h-5 w-32 bg-neutral-800 animate-pulse rounded"
        />
        <div
          class="h-4 w-48 bg-neutral-800 animate-pulse rounded"
        />
      </div>
    </div>
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
    </div>
  </div>
</div>
`;

exports[`C3 ComparisonCard > renders live mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 pb-2"
    >
      <div
        class="flex items-center gap-2 mb-3"
      >
        <svg
          class="lucide lucide-git-compare w-4 h-4 text-neutral-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M13 6h3a2 2 0 0 1 2 2v7"
          />
          <path
            d="M11 18H8a2 2 0 0 1-2-2V9"
          />
        </svg>
        <h3
          class="text-base font-semibold text-neutral-100"
        >
          候选人对比
        </h3>
      </div>
      <div
        class="grid grid-cols-2 gap-3"
      >
        <div
          class="p-2.5 rounded-lg bg-neutral-800/50 text-center"
        >
          <span
            class="text-sm font-medium text-neutral-200"
          >
            李雷
          </span>
        </div>
        <div
          class="p-2.5 rounded-lg bg-neutral-800/50 text-center"
        >
          <span
            class="text-sm font-medium text-neutral-200"
          >
            韩梅梅
          </span>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-3 space-y-1.5"
    >
      <div
        class="grid grid-cols-[1fr,auto,1fr] items-center gap-2 py-2 border-b border-neutral-800/50 last:border-b-0"
      >
        <span
          class="text-xs text-right text-emerald-400 font-medium"
        >
          6年
        </span>
        <div
          class="flex flex-col items-center"
        >
          <span
            class="text-[10px] text-neutral-600"
          >
            推荐经验
          </span>
          <svg
            class="lucide lucide-trending-up w-3 h-3 text-emerald-400 mt-0.5 rotate-[-90deg]"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 7 13.5 15.5 8.5 10.5 2 17"
            />
            <polyline
              points="16 7 22 7 22 13"
            />
          </svg>
        </div>
        <span
          class="text-xs text-neutral-400"
        >
          5年
        </span>
      </div>
      <div
        class="grid grid-cols-[1fr,auto,1fr] items-center gap-2 py-2 border-b border-neutral-800/50 last:border-b-0"
      >
        <span
          class="text-xs text-right text-emerald-400 font-medium"
        >
          Flink
        </span>
        <div
          class="flex flex-col items-center"
        >
          <span
            class="text-[10px] text-neutral-600"
          >
            工程能力
          </span>
          <svg
            class="lucide lucide-trending-up w-3 h-3 text-emerald-400 mt-0.5 rotate-[-90deg]"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 7 13.5 15.5 8.5 10.5 2 17"
            />
            <polyline
              points="16 7 22 7 22 13"
            />
          </svg>
        </div>
        <span
          class="text-xs text-neutral-400"
        >
          Spring
        </span>
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <div
        class="p-3 rounded-lg bg-amber-500/5 border border-amber-500/10"
      >
        <p
          class="text-xs text-amber-300/80 leading-relaxed"
        >
          综合来看，候选人 A 在核心技能匹配上更具优势。
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`C3 ComparisonCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="h-5 w-48 bg-neutral-800 animate-pulse rounded mb-4"
    />
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 49%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 37%;"
      />
    </div>
  </div>
</div>
`;

exports[`C4 JDCard > renders live mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 pb-3"
    >
      <div
        class="flex items-start justify-between"
      >
        <div>
          <div
            class="flex items-center gap-2 mb-1"
          >
            <h3
              class="text-base font-semibold text-neutral-100"
            >
              推荐工程师
            </h3>
            <span
              class="text-[10px] px-1.5 py-0.5 rounded border bg-emerald-500/10 text-emerald-400 border-emerald-500/20"
            >
              开放中
            </span>
          </div>
          <p
            class="text-sm text-neutral-400"
          >
            推荐架构部
             · 
            P6-P7
          </p>
        </div>
        <div
          class="flex items-center gap-3 text-xs text-neutral-500"
        >
          <span
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-clock w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            15
            天
          </span>
          <span
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-users w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <path
                d="M22 21v-2a4 4 0 0 0-3-3.87"
              />
              <path
                d="M16 3.13a4 4 0 0 1 0 7.75"
              />
            </svg>
            45
            人
          </span>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <p
        class="text-sm text-neutral-400 leading-relaxed"
      >
        负责推荐系统
      </p>
    </div>
    <div
      class="px-4 pb-3"
    >
      <h4
        class="text-xs font-medium text-neutral-500 uppercase tracking-wider mb-2"
      >
        必须要求
      </h4>
      <ul
        class="space-y-1"
      >
        <li
          class="flex items-start gap-2 text-sm text-neutral-300"
        >
          <svg
            class="lucide lucide-check-circle2 w-3.5 h-3.5 text-emerald-500 mt-0.5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          3年经验
        </li>
      </ul>
    </div>
    <div
      class="px-4 pb-3"
    >
      <h4
        class="text-xs font-medium text-neutral-500 uppercase tracking-wider mb-2"
      >
        招聘漏斗
      </h4>
      <div
        class="space-y-1.5"
      >
        <div
          class="flex items-center gap-3"
        >
          <span
            class="text-xs text-neutral-400 w-20 flex-shrink-0"
          >
            筛选
          </span>
          <div
            class="flex-1 h-2 bg-neutral-800 rounded-full overflow-hidden"
          >
            <div
              class="h-full bg-amber-500/60 rounded-full transition-all"
              style="width: 75%;"
            />
          </div>
          <span
            class="text-xs text-neutral-500 font-mono w-16 text-right"
          >
            45
            <span
              class="text-neutral-700"
            >
              /
              60
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`C4 JDCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="h-5 w-48 bg-neutral-800 animate-pulse rounded mb-4"
    />
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 49%;"
      />
    </div>
  </div>
</div>
`;

exports[`C5 JobProfileCard > renders live mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 pb-3"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <svg
          class="lucide lucide-sparkles w-4 h-4 text-amber-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"
          />
          <path
            d="M5 3v4"
          />
          <path
            d="M19 17v4"
          />
          <path
            d="M3 5h4"
          />
          <path
            d="M17 19h4"
          />
        </svg>
        <h3
          class="text-base font-semibold text-neutral-100"
        >
          岗位画像建议
        </h3>
      </div>
      <p
        class="text-sm text-neutral-400"
      >
        目标岗位：
        <span
          class="text-neutral-200 font-medium"
        >
          推荐工程师
        </span>
      </p>
    </div>
    <div
      class="px-4 pb-3"
    >
      <h4
        class="text-xs font-medium text-neutral-500 uppercase tracking-wider mb-2"
      >
        需求画像
      </h4>
      <div
        class="space-y-2"
      >
        <div
          class="flex items-start gap-2.5 p-2.5 rounded-lg bg-red-500/5 border border-red-500/10"
        >
          <span
            class="w-2 h-2 rounded-full mt-1.5 flex-shrink-0 bg-red-400"
          />
          <div
            class="min-w-0"
          >
            <p
              class="text-sm text-neutral-200"
            >
              3年以上推荐系统经验
            </p>
            <p
              class="text-[10px] text-neutral-600 mt-0.5"
            >
              关键要求
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-2.5 p-2.5 rounded-lg bg-amber-500/5 border border-amber-500/10"
        >
          <span
            class="w-2 h-2 rounded-full mt-1.5 flex-shrink-0 bg-amber-400"
          />
          <div
            class="min-w-0"
          >
            <p
              class="text-sm text-neutral-200"
            >
              精通分布式系统
            </p>
            <p
              class="text-[10px] text-neutral-600 mt-0.5"
            >
              重要加分
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <h4
        class="text-xs font-medium text-neutral-500 uppercase tracking-wider mb-2"
      >
        搜索策略
      </h4>
      <div
        class="p-3 rounded-lg bg-neutral-800/50 border border-neutral-800"
      >
        <p
          class="text-sm text-neutral-400 leading-relaxed italic"
        >
          "
          定向搜索头部公司
          "
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`C5 JobProfileCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="h-5 w-48 bg-neutral-800 animate-pulse rounded mb-4"
    />
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 49%;"
      />
    </div>
  </div>
</div>
`;

exports[`C6 MarketAnalysisCard > renders live mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 pb-3"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <svg
          class="lucide lucide-bar-chart3 w-4 h-4 text-blue-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v18h18"
          />
          <path
            d="M18 17V9"
          />
          <path
            d="M13 17V5"
          />
          <path
            d="M8 17v-3"
          />
        </svg>
        <h3
          class="text-base font-semibold text-neutral-100"
        >
          市场分析
        </h3>
      </div>
      <p
        class="text-sm text-neutral-400"
      >
        推荐工程师
         · 
        <span
          class="text-neutral-500"
        >
          人才分布
        </span>
      </p>
    </div>
    <div
      class="px-4 pb-3 space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <span
          class="text-xs text-neutral-400 w-28 flex-shrink-0 truncate"
        >
          字节
        </span>
        <div
          class="flex-1 h-5 bg-neutral-800 rounded overflow-hidden"
        >
          <div
            class="h-full rounded bg-gradient-to-r from-blue-400/40 to-blue-400/80 transition-all flex items-center justify-end pr-2"
            style="width: 100%;"
          >
            <span
              class="text-[10px] font-mono font-medium text-blue-200"
            >
              145
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <span
          class="text-xs text-neutral-400 w-28 flex-shrink-0 truncate"
        >
          阿里
        </span>
        <div
          class="flex-1 h-5 bg-neutral-800 rounded overflow-hidden"
        >
          <div
            class="h-full rounded bg-gradient-to-r from-blue-400/40 to-blue-400/80 transition-all flex items-center justify-end pr-2"
            style="width: 82.75862068965517%;"
          >
            <span
              class="text-[10px] font-mono font-medium text-blue-200"
            >
              120
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <div
        class="p-3 rounded-lg bg-blue-500/5 border border-blue-500/10 space-y-1.5"
      >
        <div
          class="flex items-start gap-2"
        >
          <svg
            class="lucide lucide-lightbulb w-3.5 h-3.5 text-blue-400 mt-0.5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
            />
            <path
              d="M9 18h6"
            />
            <path
              d="M10 22h4"
            />
          </svg>
          <p
            class="text-xs text-blue-200/80 leading-relaxed"
          >
            人才集中在头部公司
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`C6 MarketAnalysisCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="h-5 w-48 bg-neutral-800 animate-pulse rounded mb-4"
    />
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 49%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 37%;"
      />
    </div>
  </div>
</div>
`;

exports[`C7 PipelineReportCard > renders live mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 pb-3"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <svg
          class="lucide lucide-bar-chart3 w-4 h-4 text-violet-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v18h18"
          />
          <path
            d="M18 17V9"
          />
          <path
            d="M13 17V5"
          />
          <path
            d="M8 17v-3"
          />
        </svg>
        <h3
          class="text-base font-semibold text-neutral-100"
        >
          招聘周报
        </h3>
        <span
          class="text-[10px] px-1.5 py-0.5 rounded bg-neutral-800 text-neutral-500"
        >
          周报
        </span>
      </div>
      <p
        class="text-xs text-neutral-600"
      >
        2026-W21
      </p>
    </div>
    <div
      class="px-4 pb-3"
    >
      <div
        class="grid grid-cols-5 gap-2"
      >
        <div
          class="text-center p-2 rounded-lg bg-neutral-800/50"
        >
          <p
            class="text-lg font-bold text-violet-400"
          >
            12
            <span
              class="text-xs font-normal text-neutral-600 ml-0.5"
            >
              个
            </span>
          </p>
          <p
            class="text-[10px] text-neutral-600 mt-0.5"
          >
            开放岗位
          </p>
        </div>
        <div
          class="text-center p-2 rounded-lg bg-neutral-800/50"
        >
          <p
            class="text-lg font-bold text-blue-400"
          >
            89
            <span
              class="text-xs font-normal text-neutral-600 ml-0.5"
            >
              人
            </span>
          </p>
          <p
            class="text-[10px] text-neutral-600 mt-0.5"
          >
            活跃候选人
          </p>
        </div>
        <div
          class="text-center p-2 rounded-lg bg-neutral-800/50"
        >
          <p
            class="text-lg font-bold text-emerald-400"
          >
            3
            <span
              class="text-xs font-normal text-neutral-600 ml-0.5"
            >
              人
            </span>
          </p>
          <p
            class="text-[10px] text-neutral-600 mt-0.5"
          >
            本期入职
          </p>
        </div>
        <div
          class="text-center p-2 rounded-lg bg-neutral-800/50"
        >
          <p
            class="text-lg font-bold text-amber-400"
          >
            21
            <span
              class="text-xs font-normal text-neutral-600 ml-0.5"
            >
              天
            </span>
          </p>
          <p
            class="text-[10px] text-neutral-600 mt-0.5"
          >
            平均周期
          </p>
        </div>
        <div
          class="text-center p-2 rounded-lg bg-neutral-800/50"
        >
          <p
            class="text-lg font-bold text-emerald-400"
          >
            78
            <span
              class="text-xs font-normal text-neutral-600 ml-0.5"
            >
              %
            </span>
          </p>
          <p
            class="text-[10px] text-neutral-600 mt-0.5"
          >
            接受率
          </p>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <h4
        class="text-xs font-medium text-neutral-500 uppercase tracking-wider mb-2"
      >
        招聘漏斗
      </h4>
      <div
        class="space-y-1.5"
      >
        <div
          class="flex items-center gap-3"
        >
          <span
            class="text-xs text-neutral-400 w-20 flex-shrink-0"
          >
            筛选
          </span>
          <div
            class="flex-1 h-4 bg-neutral-800 rounded overflow-hidden"
          >
            <div
              class="h-full rounded bg-gradient-to-r from-violet-400/40 to-violet-400/70 transition-all"
              style="width: 100%;"
            />
          </div>
          <span
            class="text-xs text-neutral-500 font-mono w-12 text-right"
          >
            89
          </span>
          <span
            class="text-[10px] text-neutral-600 w-10 text-right"
          >
            100
            %
          </span>
        </div>
      </div>
    </div>
    <div
      class="px-4 pb-3"
    >
      <div
        class="p-3 rounded-lg bg-violet-500/5 border border-violet-500/10 space-y-1.5"
      >
        <p
          class="text-xs text-violet-200/80 leading-relaxed flex items-start gap-2"
        >
          <svg
            class="lucide lucide-trending-down w-3 h-3 mt-0.5 flex-shrink-0 text-violet-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 17 13.5 8.5 8.5 13.5 2 7"
            />
            <polyline
              points="16 17 22 17 22 11"
            />
          </svg>
          一面通过率偏低
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`C7 PipelineReportCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="h-5 w-48 bg-neutral-800 animate-pulse rounded mb-4"
    />
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 49%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 37%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 25%;"
      />
    </div>
  </div>
</div>
`;

exports[`C8 InterviewKitCard > renders live mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 pb-3"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <svg
          class="lucide lucide-clipboard-list w-4 h-4 text-blue-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="4"
            rx="1"
            ry="1"
            width="8"
            x="8"
            y="2"
          />
          <path
            d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
          />
          <path
            d="M12 11h4"
          />
          <path
            d="M12 16h4"
          />
          <path
            d="M8 11h.01"
          />
          <path
            d="M8 16h.01"
          />
        </svg>
        <h3
          class="text-base font-semibold text-neutral-100"
        >
          面试包
        </h3>
      </div>
      <p
        class="text-sm text-neutral-400"
      >
        李雷
         · 
        推荐工程师
      </p>
    </div>
    <div
      class="px-4 pb-3"
    >
      <div
        class="p-3 rounded-lg bg-amber-500/5 border border-amber-500/10"
      >
        <p
          class="text-xs text-amber-300/80 flex items-start gap-1.5"
        >
          <svg
            class="lucide lucide-message-square w-3.5 h-3.5 mt-0.5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
            />
          </svg>
          关注工程能力
        </p>
      </div>
    </div>
    <div
      class="px-4 pb-3 space-y-2"
    >
      <div
        class="rounded-lg bg-neutral-800/50 overflow-hidden"
      >
        <button
          class="w-full flex items-center justify-between p-3 hover:bg-neutral-800 transition-colors"
        >
          <span
            class="text-sm font-medium text-neutral-300"
          >
            技术基础
            <span
              class="text-xs text-neutral-600 ml-2"
            >
              (
              1
              题)
            </span>
          </span>
          <svg
            class="lucide lucide-chevron-up w-4 h-4 text-neutral-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m18 15-6-6-6 6"
            />
          </svg>
        </button>
        <div
          class="px-3 pb-3 space-y-2"
        >
          <div
            class="pl-3 border-l-2 border-neutral-700"
          >
            <div
              class="flex items-center gap-2"
            >
              <p
                class="text-sm text-neutral-300"
              >
                冷启动方案？
              </p>
              <span
                class="text-[10px] px-1 py-0.5 rounded flex-shrink-0 bg-amber-500/10 text-amber-400"
              >
                中等
              </span>
            </div>
            <p
              class="text-xs text-neutral-600 mt-0.5"
            >
              考察系统设计
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`C8 InterviewKitCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="h-5 w-48 bg-neutral-800 animate-pulse rounded mb-4"
    />
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 49%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 37%;"
      />
    </div>
  </div>
</div>
`;

exports[`C9 MemoryRecallCard > renders live mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="mx-4 mt-4 p-4 rounded-xl bg-amber-500/5 relative"
    >
      <div
        class="flex items-center gap-2 mb-2"
      >
        <svg
          class="lucide lucide-sparkles w-4 h-4 text-amber-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"
          />
          <path
            d="M5 3v4"
          />
          <path
            d="M19 17v4"
          />
          <path
            d="M3 5h4"
          />
          <path
            d="M17 19h4"
          />
        </svg>
        <span
          class="text-xs font-medium text-amber-400 uppercase tracking-wider"
        >
          AI 记忆唤醒
        </span>
      </div>
      <p
        class="text-sm text-neutral-300 leading-relaxed"
      >
        这是您第二次提及张三
      </p>
    </div>
    <div
      class="px-4 pt-3 pb-3"
    >
      <h4
        class="text-xs font-medium text-neutral-500 uppercase tracking-wider mb-2"
      >
        相关记忆
      </h4>
      <div
        class="relative pl-4 border-l border-neutral-800 space-y-3"
      >
        <div
          class="relative"
        >
          <span
            class="absolute -left-[21px] top-0.5"
          >
            <svg
              class="lucide lucide-user-check w-3.5 h-3.5 text-emerald-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <polyline
                points="16 11 18 13 22 9"
              />
            </svg>
          </span>
          <p
            class="text-sm text-neutral-400"
          >
            二面后暂停
          </p>
          <p
            class="text-[10px] text-neutral-600 mt-0.5"
          >
            2026-05-25
             · 候选人记忆
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`C9 MemoryRecallCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="h-5 w-48 bg-neutral-800 animate-pulse rounded mb-4"
    />
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
    </div>
  </div>
</div>
`;

exports[`C10 ClarificationCard > renders live mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 hover:border-neutral-700 transition-colors overflow-hidden"
  >
    <div
      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-0.5 rounded-full bg-amber-500/10 border border-amber-500/20 text-[10px] font-medium text-amber-400"
    >
      <svg
        class="lucide lucide-beaker w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5 3h15"
        />
        <path
          d="M6 3v16a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V3"
        />
        <path
          d="M6 14h12"
        />
      </svg>
      演示数据
    </div>
    <div
      class="p-4 pb-3"
    >
      <div
        class="flex items-center gap-2 mb-2"
      >
        <svg
          class="lucide lucide-help-circle w-4 h-4 text-amber-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <h3
          class="text-base font-semibold text-neutral-100"
        >
          需要更多信息
        </h3>
      </div>
      <p
        class="text-sm text-neutral-400 leading-relaxed"
      >
        请问您方便补充吗？
      </p>
    </div>
    <div
      class="px-4 pb-3 space-y-1.5"
    >
      <button
        class="w-full flex items-center justify-between p-3 rounded-lg bg-neutral-800/50 hover:bg-neutral-800 transition-colors group text-left"
      >
        <span
          class="text-sm text-neutral-300 group-hover:text-neutral-200"
        >
          搜索候选人
        </span>
        <svg
          class="lucide lucide-chevron-right w-4 h-4 text-neutral-600 group-hover:text-neutral-400 transition-colors"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`C10 ClarificationCard > renders loading mode 1`] = `
<div>
  <div
    class="relative bg-neutral-900 rounded-xl border border-neutral-800 p-4"
  >
    <div
      class="h-5 w-48 bg-neutral-800 animate-pulse rounded mb-4"
    />
    <div
      class="space-y-3"
    >
      <div
        class="h-5 w-2/3 bg-neutral-800 animate-pulse rounded"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 85%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 73%;"
      />
      <div
        class="h-4 bg-neutral-800 animate-pulse rounded"
        style="width: 61%;"
      />
    </div>
  </div>
</div>
`;
